<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EHU Zurekin</string>
    <string name="ldap_number">LDAP</string>
    <string name="ldap_password">Password</string>
    <string name="login_button">Login</string>
    <string name="recordar_check">Remember</string>
    <string name="edit_asignatura">EDIT</string>
    <string name="egela">EGELA</string>
    <string name="gaur">GAUR</string>
    <string name="irACorreo">Go to Correow</string>

    <!-- Generales -->
    <string name="seleccion_actual">Current selection:</string>

    <!-- Generales botones-->
    <string name="empty_button">Empty fields</string>
    <string name="remove_button">Remove</string>
    <string name="add_button">Add</string>
    <string name="cancel_button">Cancel</string>

    <!-- Generales listas-->
    <string name="listaDocentes">Teachers list:</string>
    <string name="listaAsignaturas">Subjects list:</string>
    <string name="listaTutorias">Meeting list:</string>
    <string name="listaClases">Class list:</string>

    <!-- Generales hora-->
    <string name="HoraDefault">00:00</string>
    <string name="HoraInicio">Start time</string>
    <string name="HoraFin">End time</string>

    <!-- Generales día-->
    <string name="dia">Day:</string>
    <string name="lunes">Monday</string>
    <string name="martes">Tuesday</string>
    <string name="miercoles">Wednesday</string>
    <string name="jueves">Thursday</string>
    <string name="viernes">Friday</string>
    <string name="sabado">Saturday</string>
    <string name="domingo">Sunday</string>

    <!-- Edit Asignaturas Usuario -->
    <string name="tusAsignaturas">Your subjects:</string>
    <string name="escogeNueva">Choose a new subject:</string>
    <string name="addAsignaturaUsuario">Add</string>
    <string name="removeAsignaturaUsuario">Remove</string>

    <!-- Docente -->
    <string name="add_docente">Add teacher</string>

    <string name="nombreDocente">Name</string>
    <string name="nombreDocenteHint">Teacher\'s name</string>

    <string name="apellidosDocente">Surnames</string>
    <string name="apellidosDocenteHint">Teacher\'s surname</string>

    <string name="correoDocente">Mail</string>
    <string name="correoDocenteHint">EHU\'s mail</string>

    <string name="despachoDocente">Office</string>
    <string name="despachoDocenteHint">number/name of Office</string>

    <string name="nuevoDocente">New Teacher</string>

    <string name="seleccionaDocente"> Choose a teacher</string>

    <!-- Popup Docente -->
    <string name="correoDeContacto">Contact email</string>
    <string name="docente">Teacher</string>
    <string name="verDocente">See teacher</string>

    <!-- Asignatura -->
    <string name="add_asignatura">Add subject </string>
    <string name="abreviaturaAsignatura">Abbreviation</string>
    <string name="abreviaturaAsignaturaHint">Subject\'s abbreviation</string>

    <string name="nombreAsignatura">Name</string>
    <string name="nombreAsignaturaHint">Subject\'s name</string>

    <string name="nuevaAsignatura">New subject</string>

    <string name="seleccionaAsignatura"> Choose a subject</string>

    <string name= "url1"> URL 1: </string>
    <string name= "url2"> URL 2: </string>
    <string name= "urlHint"> Add URL (Optional) </string>
    <string name= "noURL">URL is not added</string>

    <!-- Tutoria -->
    <string name="add_tutoria">Add</string>
    <string name="tutorias">Meeting</string>
    <string name="nuevaTutoria">New meting</string>

    <!-- Clase -->
    <string name="add_clase">Add class</string>
    <string name="donde">Where: </string>
    <string name="nuevaClase">New class</string>

    <string name="noticias">News</string>
    <string name="correo">Mail</string>
    <string name="asignaturas">Subjects</string>

    <!-- Tarea -->
    <string name="tareas">Tasks</string>
    <string name="add_tareaHint">Some task?/Link Title</string>
    <string name="confirmacionTextTareaElegida">Are you sure to add this task?</string>
    <string name="confirmacionTextTareaElegidaHint">Describe a task</string>
    <string name="confirmacionAsignaturaElegida">Subject: </string>
    <string name="ningunaAsignaturaTarea">None</string>
    <string name="confirmacionEsEnlace">Is it a link? </string>
    <string name="confirmacionSi">Yes </string>
    <string name="confirmacionNo">No </string>
    <string name="introduceURLTarea">Enter the URL</string>
    <string name="introduceURLTareaHint">Format: https://webpage.com</string>
    <!-- Editables -->
    <string name="editable">Hold button to edit</string>
    <string name="tituloEditable">Title </string>
    <string name="tituloEditableHint">Give it a title </string>

    <string name="urlEditable">Link</string>
    <string name="urlEditableHint">URL link</string>


</resources>