<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="48dp"
    android:layout_gravity="center_horizontal"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:background="@drawable/basic_layout"
    >


    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="334dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seleccionDocente_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seleccion_actual"
                android:textColor="@color/gray_500"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/seleccionActualDocente_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tituloNombreDocente_textView"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombreDocente"
                android:textStyle="bold"
                android:textColor="@color/gray_500"
                />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apellidosDocente"
                android:textStyle="bold"
                android:textColor="@color/gray_500"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nombreDocente_editText"
                android:layout_width="127dp"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/basic_textview"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/nombreDocenteHint"
                android:inputType="textPersonName"
                android:textColor="@color/gray_400"
                android:textColorHint="@color/gray_300"
                android:textSize="12sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/apellidosDocente_editText"
                android:layout_width="127dp"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/basic_textview"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/apellidosDocenteHint"
                android:inputType="textPersonName"
                android:textColor="@color/gray_400"
                android:textColorHint="@color/gray_300"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/correoDocente"
                android:textColor="@color/gray_500"
                android:textStyle="bold" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tituloListaDocentesAsignatura_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/despachoDocente"
                android:textColor="@color/gray_500"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/correoDocente_editText"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/basic_textview"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/correoDocenteHint"
                android:inputType="textPersonName"
                android:textColor="@color/gray_400"
                android:textColorHint="@color/gray_300"
                android:textSize="12sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/despachoDocente_editText"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/basic_textview"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/despachoDocenteHint"
                android:inputType="textPersonName"
                android:textColor="@color/gray_400"
                android:textColorHint="@color/gray_300"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="446dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginRight="6dp"
                android:background="@drawable/basic_layout2">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/listaDocentes"
                    android:textColor="@color/gray_500"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/emptyDocente_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_button"
                    android:layout_marginBottom="6dp"
                    android:textColor="@color/gray_400"
                    android:background="@drawable/basic_button2"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/removeDocente_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:textColor="@color/gray_400"
                    android:background="@drawable/basic_button2"
                    android:text="@string/remove_button" />

                <Button
                    android:id="@+id/addDocente_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_400"
                    android:background="@drawable/basic_button2"
                    android:text="@string/add_button" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>