<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="49dp"
    android:layout_gravity="center_horizontal"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:background="@drawable/basic_layout"
    >

    <LinearLayout
        android:layout_width="331dp"
        android:layout_height="328dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tituloEditable_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/gray_500"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/tituloEditable" />

        <EditText
            android:id="@+id/tituloEditable_editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/basic_textview2"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/tituloEditableHint"
            android:inputType="textPersonName"
            android:textColor="@color/gray_400"
            android:textColorHint="@color/gray_300" />

        <TextView
            android:id="@+id/enlaceEditable_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/gray_500"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/urlEditable" />

        <EditText
            android:id="@+id/urlEditable_editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/basic_textview2"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/urlEditableHint"
            android:inputType="textPersonName"
            android:textColor="@color/gray_400"
            android:textColorHint="@color/gray_300" />

        <Button
            android:id="@+id/addEditable_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/basic_button2"
            android:text="@string/add_button"
            android:textColor="@color/gray_400" />
    </LinearLayout>
</RelativeLayout>